<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  android:orientation="vertical" >

	<SeekBar
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/sekSpeed"
			android:layout_alignParentLeft="true"
			android:layout_marginTop="56dp" android:layout_alignParentRight="true"/>

	<TextView
			android:id="@+id/txtSpeed"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:text="@string/txt_SPEED"
			android:layout_below="@+id/sekSpeed"
			android:layout_centerHorizontal="true"/>

	<SeekBar
			android:id="@+id/sekDirection"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_centerVertical="true"
			android:layout_alignParentLeft="true"
			android:layout_alignParentRight="true"/>

	<TextView
			android:id="@+id/txtDirection"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:text="@string/txt_DIRECTION"
			android:layout_below="@+id/sekDirection"
			android:layout_centerHorizontal="true"/>

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
				  android:layout_width="match_parent"
				  android:layout_height="wrap_content"
				  android:orientation="horizontal" >
	<Button
			android:id="@+id/btnStop"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/btn_STOP"
			android:layout_alignParentBottom="true" android:layout_alignRight="@+id/txtDirection"/>


	<Button
			android:id="@+id/btnDisconnect"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/btn_DISCONNECT"
			android:layout_alignParentBottom="true"
			android:layout_alignParentLeft="true"/>
	<Button
			android:id="@+id/btnReconnect"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/btn_RECONNECT"
			android:layout_alignParentBottom="true"
			android:layout_alignParentRight="true"/>
		</LinearLayout>

	<ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
		<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/serial_text" android:layout_above="@+id/btnDisconnect"
				android:layout_alignParentRight="true" android:layout_alignParentLeft="true"/>
	</ScrollView>

</LinearLayout>